--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "wiki-history-game-www",
+  "name": "stadia-games-history-www",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "export": "next export",
     "lint": "eslint --max-warnings=0 --cache --ext .js,.ts,.tsx .",
     "lint-fix": "eslint --fix --cache --ext .js,.ts,.tsx .",
     "start": "next start"
